--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ body{
 }
 
 .wrapper{
-    background-color: rgba(255, 228, 196, 0.13);
-    padding: 5rem 2rem 5rem 2rem;
+    padding: 5rem 2rem 0rem 2rem;
     text-align: center;
 }
 
@@ -74,3 +73,117 @@ body{
     font-size: 1.05em;
 }
 
+.profil{
+    display: flex;
+    align-items: center;
+    margin-bottom: 1.5rem;
+}
+
+.profil img{
+    border-radius: 40px;
+    width: 15%;
+    margin-right: 1.5rem;
+}
+
+.profil span{
+    color: hsl(333, 80%, 67%);
+}
+
+.card{
+    background-color: hsl(300, 43%, 22%);
+    color: white;
+    padding: 2rem 2.2rem 2rem 2.2rem;
+    margin-bottom: 1rem;
+    border-radius: 10px;
+}
+
+.bottom-section{
+    margin-top: 3rem;
+}
+
+.commentaire{
+    text-align: start;
+    line-height: 20px;
+}
+
+footer{
+    margin-bottom: 3rem;
+    font-size: 0.9em;
+}
+
+footer a{
+    color: #502050;
+    font-weight: bold;
+}
+
+@media screen and (min-width: 1024px) {
+
+    .main{
+        min-width: 1020px;
+    }
+
+    .top-section{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .title{
+        width: 350px;
+        text-align: start;
+        font-size: 1em;
+    }
+
+    .title h1{
+        font-size: 2.8em;
+        line-height: 40px;
+    }
+
+    .title p{
+        font-size: 1em;
+    }
+
+    .card-review{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        width: 430px;
+    }
+
+    .stars{
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-bottom: 0;
+    }
+
+    #card-review2{
+        margin-left: -3rem;
+    }
+
+    #card-review1{
+        margin-left: -6rem;
+    }
+
+    .card{
+        width: 300px;
+        height: 210px;
+        padding: 2rem 1.3rem 2rem 1.3rem;
+    }
+
+    .bottom-section{
+        display: flex;
+        justify-content: space-between;
+    }
+
+    #card2{
+        margin-top: 1rem;
+    }
+
+    #card3{
+        margin-top: 2rem;
+    }
+
+    footer{
+        font-size: 1em;
+    }
+}
