--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-image: url("assets/images/bg-pattern-top-mobile.svg"), url("assets/images/bg-pattern-bottom-mobile.svg");
+    background-repeat: no-repeat;
+    background-position: top 0 left 0, bottom -30vh right 0;
 }
 
 .main{
@@ -118,6 +121,12 @@ footer a{
 
 @media screen and (min-width: 1024px) {
 
+    body{
+        background-image: url("assets/images/bg-pattern-top-desktop.svg"), url("assets/images/bg-pattern-bottom-desktop.svg");
+        background-repeat: no-repeat;
+        background-position: top 0 left 0, bottom -30vh right 0;
+    }
+
     .main{
         min-width: 1020px;
     }
@@ -137,6 +146,7 @@ footer a{
     .title h1{
         font-size: 2.8em;
         line-height: 40px;
+        font-weight: 700;
     }
 
     .title p{
